Signed-off-by: Ravisarani <ravisaraniranawaka@gmail.com>

--- a/src/main/webapp/hr/hr_form_staff_additional_report.xhtml
+++ b/src/main/webapp/hr/hr_form_staff_additional_report.xhtml
@@ -56,17 +56,17 @@
                         <p:commandButton ajax="false" value="Search By Shift Date" action="#{staffAdditionalFormController.searchByShiftDate()}" />                           
                         <p:commandButton ajax="false" value="Search By Approve Date" action="#{staffAdditionalFormController.searchByApproveDate()}" />                           
                         <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" onclick="onSubmitButton();" >
-                            <pe:exporter type="xlsx" target="gpBillPreview" fileName="hr_report_attendance"  />
+                            <pe:exporter type="xlsx" target="tb1" fileName="hr_form_staff_additional_report"  />
                         </p:commandButton>
                         <p:commandButton value="Print" ajax="false" action="#" >
                             <p:printer target="gpBillPreview" ></p:printer>
                         </p:commandButton>
                         <p:panel id="gpBillPreview" styleClass="noBorder summeryBorder" >  
                             <p:dataTable value="#{staffAdditionalFormController.additionalForms}" 
-                                         var="add"  >
+                                         var="add" id="tb1"  > 
 
                                 <f:facet name="header">
-                                    <h:outputLabel value="#{sessionController.loggedUser.institution.name}" /><br></br>
+                                    
                                     <h:outputLabel value="Additional Working Shift Sheet"/><br/>
                                     <h:outputLabel value="  From : "  />
                                     <h:outputLabel  value="#{hrReportController.fromDate}" >
