--- a/src/main/webapp/hr/hr_report_staff_salary_generate _or_not.xhtml
+++ b/src/main/webapp/hr/hr_report_staff_salary_generate _or_not.xhtml
@@ -60,7 +60,7 @@
                         <p:commandButton ajax="false" value="Process" action="#{hrReportController.createStaffSalaryGenereateOrNotStaffTable()}"/>
 
                         <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" onclick="onSubmitButton();" >
-                            <pe:exporter type="xlsx" target="tb1 tb2" fileName="hr_report_over_time"  />
+                            <pe:exporter type="xlsx" target="tb1 tb2" fileName="hr_report_staff_salary_generate_or_not"  />
                         </p:commandButton>
                         <p:commandButton value="Print" ajax="false" action="#" >
                             <p:printer target="gpBillPreview" ></p:printer>
@@ -68,7 +68,7 @@
                         <p:panel id="gpBillPreview" styleClass="noBorder summeryBorder">    
                             <p:dataTable id="tb2" value="#{hrReportController.salaryNotGeneratedStaffs}" var="s" rowIndexVar="i">
                                 <f:facet name="header">
-                                    <p:outputLabel value="#{sessionController.loggedUser.institution.name}" /><br></br>
+                                    
                                     <h:outputLabel style="font-size: 20px  " value="Salary Not Generated Staffs"/>
                                     <br/>
                                     <h:outputLabel value="#{hrReportController.reportKeyWord.salaryCycle.name}" />
