--- a/src/main/webapp/hr/hr_report_summery_by_staff.xhtml
+++ b/src/main/webapp/hr/hr_report_summery_by_staff.xhtml
@@ -50,7 +50,7 @@
                         <p:commandButton ajax="false" value="Process" action="#{hrReportController.createStaffWrokedDetail()}"/>
                         <p:commandButton ajax="false" value="Reset" action="#{hrReportController.reset()}"/>
                         <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" onclick="onSubmitButton();" >
-                            <pe:exporter type="xlsx" target="tb1" fileName="hr_report_attendance"  />
+                            <pe:exporter type="xlsx" target="tb1" fileName="hr_report_summery_by_staff"  />
                         </p:commandButton>
                         <p:commandButton value="Print" ajax="false" action="#" >
                             <p:printer target="gpBillPreview" ></p:printer>
