--- a/src/main/webapp/hr/hr_form_staff_form_report.xhtml
+++ b/src/main/webapp/hr/hr_form_staff_form_report.xhtml
@@ -55,7 +55,7 @@
                         <p:commandButton ajax="false" value="Search By Created Date" action="#{staffAdditionalFormController.searchFormByCreatedDate()}" />                           
                         <p:commandButton ajax="false" value="Search By Shift Date" action="#{staffAdditionalFormController.searchFormByShiftDate()}" />      
                         <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" onclick="onSubmitButton();" >
-                            <pe:exporter type="xlsx" target="gpBillPreview" fileName="hr_report_attendance"  />
+                            <pe:exporter type="xlsx" target="tb1" fileName="hr_form_staff_form_report"  />
                         </p:commandButton>
                         <p:commandButton value="Print" ajax="false" action="#" >
                             <p:printer target="gpBillPreview" ></p:printer>
@@ -64,10 +64,10 @@
                         <p:panel id="gpBillPreview" styleClass="noBorder summeryBorder" >  
 
                             <p:dataTable  value="#{staffAdditionalFormController.hrForms}" 
-                                          var="add"  >
+                                          var="add" id="tb1" >
                                 
                                 <f:facet name="header">
-                                    <h:outputLabel value="#{sessionController.loggedUser.institution.name}" /><br></br>
+                                    
                                     <h:outputLabel value="Additional Working Shift Sheet"/><br/>
                                     <h:outputLabel value="  From : "  />
                                     <h:outputLabel  value="#{staffAdditionalFormController.fromDate}" >
