--- a/src/main/webapp/hr/hr_report_finger_print_record_approved.xhtml
+++ b/src/main/webapp/hr/hr_report_finger_print_record_approved.xhtml
@@ -41,7 +41,7 @@
                         <p:commandButton ajax="false" value="Process Approved" action="#{hrReportController.createFingerPrintApproved()}"/>
                         <p:commandButton ajax="false" value="Approve Selected" action="#{hrReportController.approve()}"/>
                         <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" onclick="onSubmitButton();" >
-                            <pe:exporter type="xlsx" target="tb1" fileName="hr_report_attendance"  />
+                            <pe:exporter type="xlsx" target="tb1" fileName="hr_report_finger_print_record_approved"  />
                         </p:commandButton>
                         <p:commandButton value="Print" ajax="false" action="#" >
                             <p:printer target="gpBillPreview" ></p:printer>
@@ -51,7 +51,7 @@
                                          rowKey="#{ss.id}" 
                                          selection="#{hrReportController.selectedFingerPrintRecords}">    
                                 <f:facet name="header">
-                                    <h:outputLabel value="#{sessionController.loggedUser.institution.name}" /><br></br>
+                                    
                                     <h:outputLabel value="Finger Print Approve"/>
                                     <br/>
                                     <h:outputLabel value="  From : "  />
