--- a/src/main/webapp/hr/hr_report_finger_print_record_no_shift_setted.xhtml
+++ b/src/main/webapp/hr/hr_report_finger_print_record_no_shift_setted.xhtml
@@ -39,7 +39,7 @@
 
                         <p:commandButton ajax="false" value="Process " action="#{hrReportController.createFingerPrintRecordNoShiftSetted()}"/>
                         <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" onclick="onSubmitButton();" >
-                            <pe:exporter type="xlsx" target="tb1" fileName="hr_report_attendance"  />
+                            <pe:exporter type="xlsx" target="tb1" fileName="hr_report_finger_print_record_no_shift_setted"  />
                         </p:commandButton>
                         <p:commandButton value="Print" ajax="false" action="#" >
                             <p:printer target="gpBillPreview" ></p:printer>
@@ -47,7 +47,7 @@
                         <p:panel id="gpBillPreview"  styleClass="noBorder summeryBorder">                     
                             <p:dataTable id="tb1" value="#{hrReportController.fingerPrintRecords}" var="ss">   
                                 <f:facet name="header">
-                                    <h:outputLabel value="#{sessionController.loggedUser.institution.name}" /><br></br>
+                                   
                                     <h:outputLabel value="Finger Print Record No Shift Setted"/>
                                     <br/>
                                     <h:outputLabel value="  From : "  />
