--- a/src/main/webapp/hr/hr_report_finger_print_record_verified.xhtml
+++ b/src/main/webapp/hr/hr_report_finger_print_record_verified.xhtml
@@ -41,7 +41,7 @@
                         <p:commandButton ajax="false" value="Finger Print Verified Record With Logged Record" action="#{hrReportController.createFingerPrintRecordVarifiedWithLogged()}"/>
                         <p:commandButton ajax="false" value="Finger Print Verified Record Without Logged Record " action="#{hrReportController.createFingerPrintRecordVarifiedWithOutLogged()}"/>
                         <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" onclick="onSubmitButton();" >
-                            <pe:exporter type="xlsx" target="tb1" fileName="hr_report_attendance"  />
+                            <pe:exporter type="xlsx" target="tb1" fileName="hr_report_finger_print_record_verified"  />
                         </p:commandButton>
                         <p:commandButton value="Print" ajax="false" action="#"  >
                             <p:printer target="gpBillPreview" ></p:printer>
@@ -50,7 +50,7 @@
 
                             <p:dataTable id="tb1" value="#{hrReportController.fingerPrintRecords}" var="ss" rowIndexVar="i">
                                 <f:facet name="header">
-                                    <h:outputLabel value="#{sessionController.loggedUser.institution.name}" /><br></br>
+                                    
                                     <h:outputLabel value="Finger Print Record By Verified"/>
                                     <br/>
                                     <h:outputLabel value="  From : "  />
