--- a/src/main/webapp/hr/hr_report_month_end_staff_shift_data.xhtml
+++ b/src/main/webapp/hr/hr_report_month_end_staff_shift_data.xhtml
@@ -38,7 +38,7 @@
 
                         <p:commandButton ajax="false" value="Process" action="#{hrReportController.createMonthEndStaffShiftReport()}"/>
                         <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" onclick="onSubmitButton();" >
-                            <pe:exporter type="xlsx" target="tb1" fileName="hr_report_attendance"  />
+                            <pe:exporter type="xlsx" target="tb1" fileName="hr_report_month_end_staff_shift_data"  />
                         </p:commandButton>
                         <p:commandButton value="Print" ajax="false" action="#" >
                             <p:printer target="gpBillPreview" ></p:printer>
@@ -46,7 +46,7 @@
                         <p:panel id="gpBillPreview"  styleClass="noBorder summeryBorder">                     
                             <p:dataTable id="tb1" value="#{hrReportController.staffShifts}" var="ss" >
                                 <f:facet name="header" >
-                                    <h:outputLabel value="#{sessionController.loggedUser.institution.name}" /><br></br>
+                                   
                                     <h:outputLabel value="Month End Employee Summary" /><br/>
                                     <h:outputLabel value="  From : "  />
                                     <h:outputLabel  value="#{hrReportController.fromDate}" >
