--- a/src/main/webapp/hr/hr_report_over_time.xhtml
+++ b/src/main/webapp/hr/hr_report_over_time.xhtml
@@ -48,7 +48,7 @@
                         <p:commandButton ajax="false" value="Process All" action="#{hrReportController.createStaffShift()}"/>
                         <p:commandButton ajax="false" value="Process Only Extra Duty" action="#{hrReportController.createStaffShiftOnlyOt()}"/>
                         <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" onclick="onSubmitButton();" >
-                            <pe:exporter type="xlsx" target="tb1" fileName="hr_report_attendance"  />
+                            <pe:exporter type="xlsx" target="tb1" fileName="hr_report_over_time"  />
                         </p:commandButton>
                         <p:commandButton value="Print" ajax="false" action="#" >
                             <p:printer target="gpBillPreview" ></p:printer>
@@ -56,7 +56,7 @@
                         <p:panel id="gpBillPreview" styleClass="noBorder summeryBorder" >                     
                             <p:dataTable id="tb1" value="#{hrReportController.staffShifts}" var="ss">
                                 <f:facet name="header">
-                                    <h:outputLabel value="#{sessionController.loggedUser.institution.name}" /><br></br>
+                                    
                                     <h:outputLabel value="Extra Duty Attendance Report"/><br/>
                                     <h:outputLabel value="  From : "  />
                                     <h:outputLabel  value="#{hrReportController.fromDate}" >
