--- a/src/main/webapp/hr/hr_report_staff_salary_by_department.xhtml
+++ b/src/main/webapp/hr/hr_report_staff_salary_by_department.xhtml
@@ -47,6 +47,7 @@
 
                 <p:dataTable id="tbl" value="#{salaryCycleController.salaryByDepartments}" var="scc" >
                     <f:facet name="header">
+                        <h:outputLabel value="#{sessionController.loggedUser.institution.name}" /><br></br>
                         <h:outputLabel value="All Staff Salary Summary(By Department)"></h:outputLabel><br></br>
                         <h:outputLabel value="#{salaryCycleController.current.name}"></h:outputLabel>
                     </f:facet>
