--- a/src/main/webapp/hr/hr_report_staff_salary_deleted_report.xhtml
+++ b/src/main/webapp/hr/hr_report_staff_salary_deleted_report.xhtml
@@ -60,7 +60,7 @@
                         <p:commandButton ajax="false" value="Process" action="#{hrReportController.createStaffSalaryDeletedReport()}"/>
 
                         <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" onclick="onSubmitButton();" >
-                            <pe:exporter type="xlsx" target="tb1" fileName="hr_report_over_time"  />
+                            <pe:exporter type="xlsx" target="tb1" fileName="hr_report_staff_salary_deleted_report"  />
                         </p:commandButton>
                         <p:commandButton value="Print" ajax="false" action="#" >
                             <p:printer target="gpBillPreview" ></p:printer>
@@ -68,7 +68,7 @@
                         <p:panel id="gpBillPreview" styleClass="noBorder summeryBorder" >                     
                             <p:dataTable id="tb1" value="#{hrReportController.salaryAndDeletaedDetails}" var="ssad">
                                 <f:facet name="header">
-                                    <p:outputLabel value="#{sessionController.loggedUser.institution.name}" /><br></br>
+                                    
                                     <h:outputLabel value="Staff Salary Deleted Report"/>
                                     <h:panelGroup rendered="#{hrReportController.reportKeyWord.institution ne null}" >
                                         <br/>
