--- a/src/main/webapp/hr/hr_report_staff_shift.xhtml
+++ b/src/main/webapp/hr/hr_report_staff_shift.xhtml
@@ -40,7 +40,7 @@
                         <p:commandButton ajax="false" value="Process Worked" action="#{hrReportController.createStaffShiftWorked()}"/>
                         <p:commandButton ajax="false" value="Process Worked Lie Allowed" action="#{hrReportController.createStaffShiftLieAllowedWorked()}"/>
                         <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" onclick="onSubmitButton();" >
-                            <pe:exporter type="xlsx" target="tb1" fileName="hr_report_attendance"  />
+                            <pe:exporter type="xlsx" target="tb1" fileName="hr_report_staff_shift"  />
                         </p:commandButton>
                         <p:commandButton value="Print" ajax="false" action="#" >
                             <p:printer target="gpBillPreview" ></p:printer>
