--- a/src/main/webapp/hr/hr_report_staff_shift_extra.xhtml
+++ b/src/main/webapp/hr/hr_report_staff_shift_extra.xhtml
@@ -40,7 +40,7 @@
 
                         <p:commandButton ajax="false" value="Process" action="#{hrReportController.createStaffShiftExtra()}"/>
                         <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" onclick="onSubmitButton();" >
-                            <pe:exporter type="xlsx" target="tb1" fileName="hr_report_attendance"  />
+                            <pe:exporter type="xlsx" target="tb1" fileName="hr_report_staff_shift_extra"  />
                         </p:commandButton>
                         <p:commandButton value="Print" ajax="false" action="#" >
                             <p:printer target="gpBillPreview" ></p:printer>
@@ -48,7 +48,8 @@
                         <p:panel id="gpBillPreview"  styleClass="noBorder summeryBorder">                     
                             <p:dataTable id="tb1" value="#{hrReportController.staffShifts}" var="ss">
                                 <f:facet name="header">
-                                    <h:outputLabel value="#{sessionController.loggedUser.institution.name}" /><br></br>                                  
+                                    
+                                    
                                     <h:outputLabel style="text-align: center" value="  Staff Extra Shift  "  /><br/>
                                     <h:outputLabel/>
                                     <h:outputLabel/>
